# glkvm-mcp

./: .gitignore  LICENSE  README.md  glkvm_mcp.py  kvm_calibrate.py  kvm_click_helper.py  pyproject.toml
.github/workflows/: ci.yml
extras/: README.md  glkvm-stuck-key-fix.user.js
tests/: test_smoke.py
